2005-10-19
	* 2.14.0 released.
	* Added version check.
	* Fix bug 1330486, login bug causes crash.

2005-10-12
	* Fix bug 1324457, more detail on URL errors.

2005-10-08
	* 2.13.0 released.
	* Fix bug 1315702, Login failed.

2005-10-04
	* 2.12.0 released.
	* Fix bug 1313556, eBay login change breaks esniper.
	* Fix bug 1275990, pagename MakeBidErrorDutchSameBidQuantity not
	  recognized.

2005-09-19
	* Fix bug 1295057, blocked bid due to bidder location.
	* Fix bug 1282914, blocked bid due to no paypal account.
	* Fix bug 1252037, accept comma in price in auction file.
	* Fix bug 1295198, FreeBSD core dump.

2005-08-07
	* Fix bug 1253692.  Fixed price auction error now handled gracefully.
	* Fix bug 1300111, pagename MakeBidErrorCannotBidOnItem not recognized.

2005-07-24
	* Fix bug 1301934, pagename MakeBidErrorAuctionEnded not recognized.

2005-07-04
	* 2.11.0 released
	* Fixed proxy handling.  Removed lookup of http_proxy environment
	  variable, since libcurl does it.
	* Fixed myItems item number parsing, including for auctions with
	  no image.  Also added support for user notes.
	* Enhanced bug reporting.

2005-06-27
	* Fix bug 1228701.  Time left heading has a table cell between it and
	  the cell containing the actual time left.

2005-04-19
	* handle bid history for purchases (i.e. store items and buy-it-now
	  with no bidding)

2005-04-16
	* added -i option: print information on given auctions and exit

2005-03-09
	* rewrote error handling in prebid and bid history

2005-02-05
	* moved getopt into util.c to make compiling on windows easier
	* fixed handling of prebid result when auction has ended

2005-01-31
	* 2.10.0 released

2005-01-26
	* Fix bidding problem that sends esniper to PageReviewBid

2005-01-21
	* handle blank time left field in bid history.  This happens in
	  the last second of an auction

2005-01-19
	* code cleanup thanks to lint and valgrind
	* rewrote bid history parsing to use table parsing code.  This should